# dicc-client

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
.github/workflows/: build.yml  docker.yml
src/: main.rs
src/api/: mod.rs
src/api/mcathome/: api.rs  assignments.rs  mod.rs  platforms.rs  projects.rs  results.rs
src/data/: assignment.rs  download.rs  mod.rs  project.rs
src/manager/: mod.rs  platform.rs  worker.rs
src/util/: file.rs
