[package]
name = "dicc-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.18.2", features = ["fs", "process", "default", "macros"] }

reqwest = { version = "0.11.10", features = ["json", "blocking"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"

simplelog = { version = "0.12.0", features = ["paris"] }
paris = "1.5.13"
log = "0.4.17"

clap = { version = "3.1.18", features = ["derive"] }
sha2 = "0.10.2"
num_cpus = "1.13.1"
futures = "0.3.21"